I corrected hero on mobile

--- a/src/css/compiledTailwind.css
+++ b/src/css/compiledTailwind.css
@@ -70,6 +70,14 @@
   top: 0.5rem !important
 }
 
+.top-10 {
+  top: 2.5rem !important
+}
+
+.right-0 {
+  right: 0px !important
+}
+
 .z-0 {
   z-index: 0 !important
 }
@@ -80,6 +88,10 @@
 
 .z-50 {
   z-index: 50 !important
+}
+
+.z-10 {
+  z-index: 10 !important
 }
 
 .m-0 {
@@ -176,6 +188,34 @@
   margin-top: 0px !important
 }
 
+.mt-11 {
+  margin-top: 2.75rem !important
+}
+
+.mt-12 {
+  margin-top: 3rem !important
+}
+
+.mt-16 {
+  margin-top: 4rem !important
+}
+
+.mt-\[30px\] {
+  margin-top: 30px !important
+}
+
+.mt-\[50px\] {
+  margin-top: 50px !important
+}
+
+.mt-\[60px\] {
+  margin-top: 60px !important
+}
+
+.mt-\[64px\] {
+  margin-top: 64px !important
+}
+
 .block {
   display: block !important
 }
@@ -252,6 +292,10 @@
   width: 100% !important
 }
 
+.w-96 {
+  width: 24rem !important
+}
+
 .max-w-full {
   max-width: 100% !important
 }
@@ -275,6 +319,12 @@
 .scale-75 {
   --tw-scale-x: .75 !important;
   --tw-scale-y: .75 !important;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important
+}
+
+.scale-125 {
+  --tw-scale-x: 1.25 !important;
+  --tw-scale-y: 1.25 !important;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important
 }
 
@@ -328,6 +378,10 @@
 
 .items-center {
   align-items: center !important
+}
+
+.justify-start {
+  justify-content: flex-start !important
 }
 
 .justify-end {
@@ -572,6 +626,10 @@
 
 .p-0 {
   padding: 0px !important
+}
+
+.p-\[22rem\] {
+  padding: 22rem !important
 }
 
 .px-4 {
